--- a/frontend/src/styles/Comment.module.css
+++ b/frontend/src/styles/Comment.module.css
@@ -1,10 +1,13 @@
 .Owner {
-    font-weight: bold;
-    color: #2142b2;
-    margin-right: 8px;
-  }
-  
-  .Date {
-    font-weight: lighter;
-    color: #c1c1c5;
-  }
+  font-weight: bold;
+  color: #262d3f;
+  margin-right: 8px;
+}
+
+.Date {
+  color: #8a8a8a;
+}
+
+.Content {
+  font-size: 15px;
+}
