--- a/frontend/src/styles/NavBar.module.css
+++ b/frontend/src/styles/NavBar.module.css
@@ -1,12 +1,12 @@
 .NavBar {
-    background-color: #ffffff;
-    border: 1px solid #dadadf;
-  }
-  
-  .NavLink {
-    padding: 5px;
-  }
-  
-  .Active i {
-    color: #2142b2;
-  }
+  background-color: #fcfcfc;
+  border: 1px solid #dadadf;
+}
+
+.NavLink {
+  padding: 5px;
+}
+
+.Active i {
+  color: #262d3f;
+}
